--- a/.github/workflows/run-qnap.yml
+++ b/.github/workflows/run-qnap.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3-tk mpv
+          sudo apt-get install -y python3-tk
           pip install --upgrade pip
       
       - name: Run Video Player App
