--- a/.github/workflows/run-qnap.yml
+++ b/.github/workflows/run-qnap.yml
@@ -24,12 +24,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-tk
           pip install --upgrade pip
+          pip install -r requirements.txt
       
       - name: Run Video Player App
         run: |
