--- a/.github/workflows/run-qnap.yml
+++ b/.github/workflows/run-qnap.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3-tk
+          sudo apt-get install -y python3-tk libmpv-dev mpv
           pip install --upgrade pip
           pip install -r requirements.txt
       
